--- a/pasarela-pagos-argentina.html
+++ b/pasarela-pagos-argentina.html
@@ -24,6 +24,7 @@
         Número de CBU: 0720036688000002809340 <br>
         Alias de CBU: MEDICA.PINCHE.TERNA
         </h2></div>
+    <button class="boton-transferencia"><a class="enlace-boton-transferencia" href="agradecimiento.html">Ya realicé la transferencia!</a></button>
         <div data-mc-src="085f0c6f-43cc-42c2-a896-692442976fe8#instagram"></div>
         
         <script 
