--- a/buenosaires.html
+++ b/buenosaires.html
@@ -151,7 +151,7 @@
             <img src="p8blakensenWideP1.png" class="p8blakensenWide" alt="">
             <img src="p8blakensenP1.png" class="p8blakensen" alt="">
             <div class="texto-p8">
-                <h6 class="h6-p8 primerah6p8">&rarr; 4 sesiones gratis de consulta para <br>que hables con los coaches</h6>
+                <h6 class="h6-p8 primerah6p8">&rarr; 4 sesiones gratis de consulta para <br>que hables con los coaches.</h6>
                 <h6 class="h6-p8">&rarr; 4 salidas prácticas presenciales en <br> donde vas con nosotros a bares y boliches.</h6>
                 <h6 class="h6-p8">&rarr; Acceso a la comunidad Blakensen <br>con contenido exclusivo.</h6>
                 <h6 class="h6-p8 ultimah6p8"> &rarr; Material de apoyo para tener siempre <br>a mano el manual de lo que tenés que hacer.</h6>
