--- a/intensivos.html
+++ b/intensivos.html
@@ -4,11 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style-nav.css" type="text/css">
-    <link rel="stylesheet" href="enproceso.css" type="text/css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Sniglet&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Sniglet&display=swap" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css">
+<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css">
+<link rel="stylesheet" href="style-nav.css" type="text/css">
+    <link rel="stylesheet" href="intensivos.css" type="text/css">
+    <link rel="stylesheet" href="normalize.css" type="text/css">
     <title>Intensivos</title>
 </head>
-<body>
+<body class="body">
   <nav>
     <img src="icon_menu.png" alt="menu" class="menu">
 
@@ -73,6 +82,15 @@
       </div>
   </nav>
 <script src="script.js"></script>
-<h1 class="enproceso">PRÓXIMAMENTE</h1>
+<h1 class="h1-principal">Programas intensivos</h1>
+<button class="btn"><a class="btn-enlace" href="daygame-cibergame.html">Daygame & Cibergame</a></button>
+<button class="btn"><a class="btn-enlace" href="social-midgame.html">Social & Mid Game</a></button>
+<button class="btn"><a class="btn-enlace" href="daygame-cibergame.html">Sexo al %100</a></button>
+<div data-mc-src="085f0c6f-43cc-42c2-a896-692442976fe8#instagram"></div>
+        
+<script 
+  src="https://cdn2.woxo.tech/a.js#641a77aa0a1605513ab1f222" 
+  async data-usrc>
+</script>
 </body>
 </html>
