--- a/pasarela-pagos-uruguay-dc.html
+++ b/pasarela-pagos-uruguay-dc.html
@@ -16,8 +16,8 @@
     <h1 class="h1">Podes realizar el pago con tarjeta de debito o crédito a traves de MercadoPago</h1>
     <div class="container-boton-mercadopago">
         <script class="boton-mercadopago" src="https://www.mercadopago.com.uy/integrations/v1/web-payment-checkout.js"
-        data-preference-id="185912670-ad9cb9b1-489d-42df-9a1e-d0189b509a6b" data-source="button">
-        </script>
+data-preference-id="185912670-ad5e8102-db60-4bcc-9f8f-bdd271a712ac" data-source="button">
+</script>
     </div>
     <h1 class="h1">O tambien podes realizar una transferencia a ésta cuenta:</h1>
     <div class="cuenta-container"><h2 class="h2-cuenta-container">
@@ -28,7 +28,7 @@
             Dólares  <br>
             1704474
             </h2></div>
-            <button class="boton-transferencia"><a class="enlace-boton-transferencia" href="agradecimiento.html">Ya realicé la transferencia!</a></button>
+            <button class="boton-transferencia"><a class="enlace-boton-transferencia" href="agradecimiento-dc.html">Ya realicé la transferencia!</a></button>
         <div data-mc-src="085f0c6f-43cc-42c2-a896-692442976fe8#instagram"></div>
         
         <script 
