--- a/pasarela-pagos-argentina-dc.html
+++ b/pasarela-pagos-argentina-dc.html
@@ -8,29 +8,24 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Sniglet&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="normalize.css" type="text/css">
     <link rel="stylesheet" href="pasarela-pagos-argentina.css" type="text/css">
-    <title>Pasarela de pagos para Uruguay</title>
+    <title>Pasarela de pagos para Argentina</title>
 </head>
 <body class="body">
     <img src="p1blackensenWide.png" alt="" class="img1-blakensenWide pdf">
     <img src="p1blackensen.png" alt="" class="img1-blakensen pdf">
     <h1 class="h1">Podes realizar el pago con tarjeta de debito o crédito a traves de MercadoPago</h1>
     <div class="container-boton-mercadopago">
-        <script class="boton-mercadopago" src="https://www.mercadopago.com.uy/integrations/v1/web-payment-checkout.js"
-        data-preference-id="185912670-ad9cb9b1-489d-42df-9a1e-d0189b509a6b" data-source="button">
+        <script class="boton-mercadopago" src="https://www.mercadopago.com.ar/integrations/v1/web-payment-checkout.js"
+        data-preference-id="432811606-0706fbd2-ee19-4334-96c4-582170e68bfa" data-source="button">
         </script>
     </div>
     <h1 class="h1">O tambien podes realizar una transferencia a ésta cuenta:</h1>
     <div class="cuenta-container"><h2 class="h2-cuenta-container">
-        Pesos Uruguayos <br>
-        1704466
+        Número de CBU: 0720036688000002809340 <br>
+        Alias de CBU: MEDICA.PINCHE.TERNA
         </h2></div>
-        <div class="cuenta-container"><h2 class="h2-cuenta-container">
-            Dólares  <br>
-            1704474
-            </h2></div>
-            <button class="boton-transferencia"><a class="enlace-boton-transferencia" href="agradecimiento.html">Ya realicé la transferencia!</a></button>
+        <button class="boton-transferencia"><a class="enlace-boton-transferencia" href="agradecimiento-dc.html">Ya realicé la transferencia!</a></button>
         <div data-mc-src="085f0c6f-43cc-42c2-a896-692442976fe8#instagram"></div>
-        
         <script 
           src="https://cdn2.woxo.tech/a.js#641a77aa0a1605513ab1f222" 
           async data-usrc>
