--- a/social-midgame.html
+++ b/social-midgame.html
@@ -14,9 +14,9 @@
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css">
 <link rel="stylesheet" href="style-nav.css" type="text/css">
     <link rel="stylesheet" href="filtro-paises.css" type="text/css">
+    <link rel="stylesheet" href="social.css" type="text/css">
     <link rel="stylesheet" href="normalize.css" type="text/css">
-    <link rel="stylesheet" href="master.css" type="text/css">
-	<title>Primer paso</title>
+	<title>Intensivo Social and Midgame</title>
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body class="body">
@@ -84,17 +84,17 @@
           </div>
       </nav>
 	  <script src="script.js"></script>
-    <h1 class="un-titulo">Bienvenido al <br> Master en Seducción</h1>
+    <h1 class="un-titulo">Bienvenido al curso<br> Social & Midgame</h1>
     <h1 class="h1">Elige desde que ciudad realizarías el curso: </h1>
 	<form class="form">
 		<label class="label" for="city">Ciudad:</label>
 		<select id="city" name="city">
 			<option value="">Selecciona una ciudad</option>
-			<option value="buenosaires">Buenos Aires</option>
-			<option value="montevideo">Montevideo</option>
-			<option value="otrauruguay">Otra ciudad de Uruguay</option>
-			<option value="otraargentina">Otra ciudad de Argentina</option>
-			<option value="otrolugar">Otra ciudad del mundo</option>
+			<option value="buenosaires-sm">Buenos Aires</option>
+			<option value="montevideo-sm">Montevideo</option>
+			<option value="otrauruguay-sm">Otra ciudad de Uruguay</option>
+			<option value="otraargentina-sm">Otra ciudad de Argentina</option>
+			<option value="otrolugar-sm">Otra ciudad del mundo</option>
 		</select>
 
 		<button class="boton"  disabled><a class="boton-enlace" href="" id="continuar">Continuar</a> </button>
