--- a/intensivos.html
+++ b/intensivos.html
@@ -12,6 +12,13 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Sniglet&display=swap" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css">
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css">
+<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+<link rel="manifest" href="site.webmanifest">
+<link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="theme-color" content="#ffffff">
 <link rel="stylesheet" href="style-nav.css" type="text/css">
     <link rel="stylesheet" href="intensivos.css" type="text/css">
     <link rel="stylesheet" href="normalize.css" type="text/css">
