--- a/daygame-cibergame.html
+++ b/daygame-cibergame.html
@@ -91,8 +91,9 @@
           </div>
       </nav>
 	  <script src="script.js"></script>
-    <h1 class="un-titulo">Bienvenido al curso<br> Daygame & Cibergame</h1>
-    <h1 class="h1">Elige desde que ciudad realizarías el curso: </h1>
+    <h1 class="un-titulo">Bienvenido al curso <br> Daygame & Cibergame</h1>
+
+    <h1 class="h1">Elige desde que ciudad vas a realizar el curso: </h1>
 	<form class="form">
 		<label class="label" for="city">Ciudad:</label>
 		<select id="city" name="city">
