--- a/masterenseduccion.html
+++ b/masterenseduccion.html
@@ -92,7 +92,7 @@
       </nav>
 	  <script src="script.js"></script>
     <h1 class="un-titulo">Bienvenido al <br> Master en Seducción</h1>
-    <h1 class="h1">Elige desde que ciudad realizarías el curso: </h1>
+    <h1 class="h1">Elige desde que ciudad vas a realizar el curso: </h1>
 	<form class="form">
 		<label class="label" for="city">Ciudad:</label>
 		<select id="city" name="city">
