--- a/montevideo-dc.html
+++ b/montevideo-dc.html
@@ -32,7 +32,7 @@
    <!--------------------imagen2, video y boton de acceso---------------->
    <section class="container-img2blak">
     <img src="p2blakensen-dc.png" class="img2-blakensen pdf" alt="">
-    <img src="p2blakensen-dc.png" class="img2-blakensen-wide pdf" alt="">
+    <img src="p2blakensenWide-dc.png" class="img2-blakensen-wide pdf" alt="">
     <div class="primerTexto-container">
    <p class="primerTexto">¡La combinación pensada para los que <br>
     quieren seducir durante el día y con redes
