Agrego imagen miniatura

--- a/masterenseduccion.html
+++ b/masterenseduccion.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <meta property="og:title" content="Master en seducción" />
+    <meta property="og:description" content="En esta página vas a poder realizar la inscripción al curso Master en seducción" />
+    <meta property="og:image" content="https://www.blakensen.com/p2blakensenWide.png" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Sniglet&display=swap" rel="stylesheet">
