--- a/daygame-cibergame.html
+++ b/daygame-cibergame.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <meta property="og:title" content="Intensivo Daygame & Cibergame" />
+    <meta property="og:description" content="En esta página vas a poder realizar la inscripción al programa intensivo Daygame y Cibergame" />
+    <meta property="og:image" content="https://www.blakensen.com/p2blakensenWide-dc.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Sniglet&display=swap" rel="stylesheet">
