Actualizacion permite cuotas

--- a/pasarela-pagos-argentina-dc.html
+++ b/pasarela-pagos-argentina-dc.html
@@ -20,7 +20,8 @@
 <body class="body">
     <img src="p1blackensenWide.png" alt="" class="img1-blakensenWide pdf">
     <img src="p1blackensen.png" alt="" class="img1-blakensen pdf">
-    <h1 class="h1">Podes realizar el pago con tarjeta de debito o crédito a traves de MercadoPago</h1>
+    <h1 class="h1">El precio del programa es de <br>$65.000 (pesos argentinos)</h1>
+    <h1 class="h1">Podés realizar el pago con tarjeta de debito o crédito a traves de MercadoPago (permite cuotas)</h1>
     <div class="container-boton-mercadopago">
         <script class="boton-mercadopago" src="https://www.mercadopago.com.ar/integrations/v1/web-payment-checkout.js"
         data-preference-id="432811606-0706fbd2-ee19-4334-96c4-582170e68bfa" data-source="button">
