Actualización pasarela uruguay

--- a/pasarela-pagos-uruguay.html
+++ b/pasarela-pagos-uruguay.html
@@ -20,7 +20,8 @@
 <body class="body">
     <img src="p1blackensenWide.png" alt="" class="img1-blakensenWide pdf">
     <img src="p1blackensen.png" alt="" class="img1-blakensen pdf">
-    <h1 class="h1">Podes realizar el pago con tarjeta de debito o crédito a traves de MercadoPago</h1>
+    <h1 class="h1">El precio del programa es de <br>$9.900 (pesos uruguayos)</h1>
+    <h1 class="h1">Podés realizar el pago con tarjeta de debito o crédito a traves de MercadoPago (permite cuotas)</h1>
     <div class="container-boton-mercadopago">
         <script class="boton-mercadopago" src="https://www.mercadopago.com.uy/integrations/v1/web-payment-checkout.js"
         data-preference-id="185912670-ad9cb9b1-489d-42df-9a1e-d0189b509a6b" data-source="button">
@@ -29,7 +30,10 @@
     <h1 class="h1">O tambien podes realizar una transferencia a ésta cuenta:</h1>
     <div class="cuenta-container"><h2 class="h2-cuenta-container">
         Pesos Uruguayos <br>
-        1704466
+        ITAU <br>
+        Pesos <br>
+        1704466 <br>
+        Mathias Mendoza
         </h2></div>
         <div class="cuenta-container"><h2 class="h2-cuenta-container">
             Dólares  <br>
