--- a/buenosaires.html
+++ b/buenosaires.html
@@ -254,7 +254,7 @@ src="https://www.facebook.com/tr?id=322240345837600&ev=PageView&noscript=1"
 <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
 
 <script src="slider-testimonios.js"></script>
- <script> fbq('track')</script>
+<script> fbq('track', 'Visita')</script>
 </body>
 
 </html>
