--- a/pasarela-pagos-uruguay.html
+++ b/pasarela-pagos-uruguay.html
@@ -15,6 +15,23 @@
 <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="normalize.css" type="text/css">
     <link rel="stylesheet" href="pasarela-pagos-argentina.css" type="text/css">
+    <!-- Meta Pixel Code -->
+<script>
+!function(f,b,e,v,n,t,s)
+{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];
+s.parentNode.insertBefore(t,s)}(window, document,'script',
+'https://connect.facebook.net/en_US/fbevents.js');
+fbq('init', '670702824567056');
+fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=670702824567056&ev=PageView&noscript=1"
+/></noscript>
+<!-- End Meta Pixel Code -->
     <title>Pasarela de pagos para Uruguay</title>
 </head>
 <body class="body">
@@ -46,5 +63,6 @@
           src="https://cdn2.woxo.tech/a.js#641a77aa0a1605513ab1f222" 
           async data-usrc>
         </script>
+    <script> fbq('track', 'Visita')</script>
 </body>
 </html>
