--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="style-nav.css" type="text/css">
-    <link rel="stylesheet" href="enproceso.css" type="text/css">
+    <link rel="stylesheet" href="estilo-index.css" type="text/css">
     <title>Home</title>
 </head>
-<body>
+<body class="body">
     <nav>
         <img src="icon_menu.png" alt="menu" class="menu">
     
@@ -80,6 +80,17 @@
           </div>
       </nav>
       <script src="script.js"></script>
-      <h1 class="enproceso">PRÓXIMAMENTE</h1>
+      <center><img src="p1blackensen.png" alt="" class="img1-blakensen pdf"></center>
+      <div class="button-container">
+        <a class="button" href="masterenseduccion.html">Level 1: <br>Master en seducción </a>
+        <a class="button" href="daygame-cibergame.html">Level 2: <br>Daygame & Cibergame</a>
+        <a class="button" href="social-midgame.html">Level 3: <br>Social & MidGame</a>
+      </div>
+      <div data-mc-src="085f0c6f-43cc-42c2-a896-692442976fe8#instagram"></div>
+        
+        <script 
+          src="https://cdn2.woxo.tech/a.js#641a77aa0a1605513ab1f222" 
+          async data-usrc>
+        </script>
 </body>
 </html>
