--- a/iniciacion.html
+++ b/iniciacion.html
@@ -20,7 +20,7 @@
 <link rel="manifest" href="site.webmanifest">
 <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
     <link rel="stylesheet" href="iniciacion.css" type="text/css">
-    <title>Document</title>
+    <title>Curso de seducción</title>
 </head>
 <body class="body">
     <center><img src="p1blackensen.png" alt="" class="img1-blakensen pdf"></center>
@@ -38,7 +38,7 @@
     <h2 class="h2"><span style="color: rgb(255, 0, 0);">ADVERTENCIA: El contenido de este programa es altamente censurable y no podemos subirlo a las redes sociales.</span></h2>
     <button id="mostrarFormulario" class="saltar container-buton"><a class="container-buton-link">¡Quiero ingresar al programa!</a></button>
     <div id="formularioContenedor" class="oculto">
-        <iframe  width="940" height="1305" src="https://2afe7afe.sibforms.com/serve/MUIFAKf8maG3ioTAfE3HF81Cbnewguztq4A6qgsvuhtRHg9Ol6mc5usl43f9RIcEgKb2smFFkIr4-OeGmRUKQKIdyAbEPT-IuudWljghdDlJBwzDS9RFqTDyFv_6_jYeKLMHyVk7NZJ5tGalhSy6c9y2_95TrkLN82nEKKS4g7CYHQk4RNx_e-hbYMpk2BX63o0XK3iJgU9lzheQ" frameborder="0" scrolling="auto" allowfullscreen style="display: block;margin-left: auto;margin-right: auto;max-width: 100%;"></iframe>
+        <iframe width="940" height="1305" src="https://2afe7afe.sibforms.com/serve/MUIFAEmz7BeUNdS6C4cCYjsqYn6mmA_ZGjX_Ytwd_waZBghSxgAA-UQsMBx0PDaJ6LHFCu6kKlce8Y_wcSP6VJVz0oRWujgf4h827DiGkQIbNIC7_4bGizroBcfNiuW06Zgj8rGoIiPWgwYarQKPkQvXXPuQCSDYmDws0CBd_2-Jr7xuqIjJgvRDdF1CjpxtvFoHwAlLunwLKpwu" frameborder="0" scrolling="auto" allowfullscreen style="display: block;margin-left: auto;margin-right: auto;max-width: 100%;"></iframe>
     </div>
 
     <section class="descripcion-container">
