--- a/iniciacion.html
+++ b/iniciacion.html
@@ -38,8 +38,7 @@
     </div><!--https://player.vimeo.com/video/780942676?h=c60d8029ae&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479-->
     <button id="mostrarFormulario" class="saltar container-buton"><a class="container-buton-link">¡Quiero ingresar al programa!</a></button>
     <div id="formularioContenedor" class="oculto">
-        <iframe width="940" height="1305" src="https://2afe7afe.sibforms.com/serve/MUIFALc4vvavJmEKfHI2ywatBJns3XmpJeQ_xhiluG-woPyTErhMLL4lCr5bftHOgUMY9bOUxA00Un1AfQbybDsSggF1EbqTcoT7NzxMKLgoEdrNPfJuFwHE8hA_vPnNfB7edSxNDT6Vo5yUeM5r-DYznMwJctkfIsX5WDp9opD-0pDWYipeiRCbtwzl_knKKCN45QNJiYXZET0Y" frameborder="0" scrolling="auto" allowfullscreen style="display: block;margin-left: auto;margin-right: auto;max-width: 100%;"></iframe> </div>
-
+        <iframe width="940" height="1305" src="https://2afe7afe.sibforms.com/serve/MUIFAKvKqlIIUdyEiTZhT2hmm9pP1f9ONQbiOAFOaiC1U6G4wL18cfQrB_hacxBOtKpXXbUE7_YAVflFLaJaR3PkvAcL6gpgYWj36JqwQLr9crI5yWIMpOQQTCDB8-HczPLT9RBxKYNW4dsVNmbn-hbPZ4fzE7wQvUW5wGH84PHuSllroAARz4v8tSSrnKJxWq-hvuimOlLT0nLA" frameborder="0" scrolling="auto" allowfullscreen style="display: block;margin-left: auto;margin-right: auto;max-width: 100%;"></iframe></div>
     <section class="descripcion-container">
         <img src="p3blakensen.png" class="p3blakensen" alt="">
         <img src="p3blakensenWide.png" class="p3blakensen-wide" alt="">
@@ -93,8 +92,7 @@
     </div>
     <button id="mostrarFormulario" class="saltar container-buton"><a class="container-buton-link">¡Quiero ingresar al programa!</a></button>
     <div id="formularioContenedor" class="oculto">
-        <iframe width="940" height="1305" src="https://2afe7afe.sibforms.com/serve/MUIFALc4vvavJmEKfHI2ywatBJns3XmpJeQ_xhiluG-woPyTErhMLL4lCr5bftHOgUMY9bOUxA00Un1AfQbybDsSggF1EbqTcoT7NzxMKLgoEdrNPfJuFwHE8hA_vPnNfB7edSxNDT6Vo5yUeM5r-DYznMwJctkfIsX5WDp9opD-0pDWYipeiRCbtwzl_knKKCN45QNJiYXZET0Y" frameborder="0" scrolling="auto" allowfullscreen style="display: block;margin-left: auto;margin-right: auto;max-width: 100%;"></iframe> 
-    </div>
+        <iframe width="940" height="1305" src="https://2afe7afe.sibforms.com/serve/MUIFAKvKqlIIUdyEiTZhT2hmm9pP1f9ONQbiOAFOaiC1U6G4wL18cfQrB_hacxBOtKpXXbUE7_YAVflFLaJaR3PkvAcL6gpgYWj36JqwQLr9crI5yWIMpOQQTCDB8-HczPLT9RBxKYNW4dsVNmbn-hbPZ4fzE7wQvUW5wGH84PHuSllroAARz4v8tSSrnKJxWq-hvuimOlLT0nLA" frameborder="0" scrolling="auto" allowfullscreen style="display: block;margin-left: auto;margin-right: auto;max-width: 100%;"></iframe> </div>
 
     </section>
     <!-----------CARROUSEL DE VIDEOS PARA MOBILE------------------------->
@@ -133,8 +131,7 @@
         </section>
         <button id="mostrarFormulario" class="saltar container-buton"><a class="container-buton-link">¡Quiero ingresar al programa!</a></button>
         <div id="formularioContenedor" class="oculto">
-            <iframe width="940" height="1305" src="https://2afe7afe.sibforms.com/serve/MUIFALc4vvavJmEKfHI2ywatBJns3XmpJeQ_xhiluG-woPyTErhMLL4lCr5bftHOgUMY9bOUxA00Un1AfQbybDsSggF1EbqTcoT7NzxMKLgoEdrNPfJuFwHE8hA_vPnNfB7edSxNDT6Vo5yUeM5r-DYznMwJctkfIsX5WDp9opD-0pDWYipeiRCbtwzl_knKKCN45QNJiYXZET0Y" frameborder="0" scrolling="auto" allowfullscreen style="display: block;margin-left: auto;margin-right: auto;max-width: 100%;"></iframe> </div>
-        <div data-mc-src="085f0c6f-43cc-42c2-a896-692442976fe8#instagram"></div>
+            <iframe width="940" height="1305" src="https://2afe7afe.sibforms.com/serve/MUIFAKvKqlIIUdyEiTZhT2hmm9pP1f9ONQbiOAFOaiC1U6G4wL18cfQrB_hacxBOtKpXXbUE7_YAVflFLaJaR3PkvAcL6gpgYWj36JqwQLr9crI5yWIMpOQQTCDB8-HczPLT9RBxKYNW4dsVNmbn-hbPZ4fzE7wQvUW5wGH84PHuSllroAARz4v8tSSrnKJxWq-hvuimOlLT0nLA" frameborder="0" scrolling="auto" allowfullscreen style="display: block;margin-left: auto;margin-right: auto;max-width: 100%;"></iframe> <div data-mc-src="085f0c6f-43cc-42c2-a896-692442976fe8#instagram"></div>
         
     <script 
       src="https://cdn2.woxo.tech/a.js#641a77aa0a1605513ab1f222" 
