--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
       <script src="script.js"></script>
       <center><img src="p1blackensen.png" alt="" class="img1-blakensen pdf"></center>
       <div class="button-container">
+        <a class="button" href="iniciacion.html">Level 0: <br>Curso de seducción </a>
         <a class="button" href="masterenseduccion.html">Level 1: <br>Master en seducción </a>
         <a class="button" href="daygame-cibergame.html">Level 2: <br>Daygame & Cibergame</a>
         <a class="button" href="social-midgame.html">Level 3: <br>Social & MidGame</a>
