--- a/iniciacion.html
+++ b/iniciacion.html
@@ -194,5 +194,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
 <script src="slider-testimonios.js"></script>
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+<script src="script2.js"></script>
 </body>
 </html>
