--- a/cursodeseduccion.html
+++ b/cursodeseduccion.html
@@ -56,7 +56,7 @@
     </div>
     
   <section id="tuSection" class="continuacion">
-    <h2 class="h2">Completá el formulario si te interesa formarte con Blakensen y accede a nuestros canales de difusión donde te aportamos valor todas las semanas</h2>
+    <h2 class="h2">Completá el formulario y aplicá a una llamada de asesoría gratuita.  Accedé a nuestros canales de difusión donde te aportamos valor todas las semanas</h2>
     <button class="container-buton"><a href="https://forms.gle/CX4rNuSHrL6eSm9R6" class="container-buton-link">Completar formulario</a></button>
    
     <div data-mc-src="085f0c6f-43cc-42c2-a896-692442976fe8#instagram"></div>
@@ -83,6 +83,6 @@
         setTimeout(function() {
             var section = document.getElementById('tuSection'); // Reemplaza 'tuSection' con el ID de tu sección
             section.style.display = 'block';
-        }, 900000); // 900,000 milisegundos = 15 minutos
+        }, 600000); // 900,000 milisegundos = 15 minutos
         </script>
 </body>
