--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
       <div class="button-container">
         <a class="button" href="iniciacion.html">Level 0: <br>Curso de seducción </a>
         <a class="button" href="masterenseduccion.html">Level 1: <br>Master en seducción </a>
+        <a class="button" href="https://www.facebook.com/groups/715473467169572">Grupo exclusivo de facebook</a>
+       
       </div>
       <div data-mc-src="085f0c6f-43cc-42c2-a896-692442976fe8#instagram"></div>
         
