--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
       <div class="button-container">
         <a class="button" href="iniciacion.html">Level 0: <br>Curso de seducción </a>
         <a class="button" href="masterenseduccion.html">Level 1: <br>Master en seducción </a>
+        <a class="button" href="sesiongratuita.html">Aplicá a una sesión gratuita</a>
         <a class="button" href="https://www.facebook.com/groups/715473467169572">Grupo exclusivo de facebook</a>
        
       </div>
