--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
       <script src="script.js"></script>
       <center><img src="p1blackensen.png" alt="" class="img1-blakensen pdf"></center>
       <div class="button-container">
-        <a class="button" href="iniciacion.html">Curso GRATIS de seducción </a>
-        <a class="button" href="masterenseduccion.html">Master en seducción </a>
+        <a class="button" href="iniciacion.html">Minicurso GRATIS de seducción </a>
+        <a class="button" href="masterenseduccion.html">Mentoría: <br> Master en seducción </a>
         <a class="button" href="sesiongratuita.html">Aplicá a una sesión gratuita</a>
         <a class="button" href="https://www.facebook.com/groups/715473467169572">Grupo exclusivo de facebook</a>
        
