--- a/pasarela-pagos-uruguay.html
+++ b/pasarela-pagos-uruguay.html
@@ -15,34 +15,20 @@
 <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="normalize.css" type="text/css">
     <link rel="stylesheet" href="pasarela-pagos-argentina.css" type="text/css">
-    <!-- Meta Pixel Code -->
-<script>
-!function(f,b,e,v,n,t,s)
-{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-n.queue=[];t=b.createElement(e);t.async=!0;
-t.src=v;s=b.getElementsByTagName(e)[0];
-s.parentNode.insertBefore(t,s)}(window, document,'script',
-'https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '670702824567056');
-fbq('track', 'PageView');
-</script>
-<noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=670702824567056&ev=PageView&noscript=1"
-/></noscript>
-<!-- End Meta Pixel Code -->
     <title>Pasarela de pagos para Uruguay</title>
 </head>
 <body class="body">
     <img src="p1blackensenWide.png" alt="" class="img1-blakensenWide pdf">
     <img src="p1blackensen.png" alt="" class="img1-blakensen pdf">
-    <h1 class="h1">El precio del programa es de <br>$9.900 (pesos uruguayos)</h1>
-    <h1 class="h1">Podés realizar el pago con tarjeta de debito o crédito a traves de MercadoPago (permite cuotas)</h1>
+    <h1 class="h1">Podes realizar el pago con tarjeta de debito o crédito a traves de MercadoPago</h1>
     <div class="container-boton-mercadopago">
         <script class="boton-mercadopago" src="https://www.mercadopago.com.uy/integrations/v1/web-payment-checkout.js"
+data-preference-id="185912670-d324290d-71d3-44d4-8c1d-fcfe325cd373" data-source="button">
+</script>
+        <!--<script class="boton-mercadopago" src="https://www.mercadopago.com.uy/integrations/v1/web-payment-checkout.js"
         data-preference-id="185912670-ad9cb9b1-489d-42df-9a1e-d0189b509a6b" data-source="button">
-        </script>
+        </script>-->
+
     </div>
     <h1 class="h1">O tambien podes realizar una transferencia a ésta cuenta:</h1>
     <div class="cuenta-container"><h2 class="h2-cuenta-container">
@@ -63,6 +49,5 @@ src="https://www.facebook.com/tr?id=670702824567056&ev=PageView&noscript=1"
           src="https://cdn2.woxo.tech/a.js#641a77aa0a1605513ab1f222" 
           async data-usrc>
         </script>
-    <script> fbq('track', 'Visita')</script>
 </body>
 </html>
