--- a/agradecimiento-dc.html
+++ b/agradecimiento-dc.html
@@ -22,7 +22,7 @@
    <h1 class="primerh1">¡Perfecto!</h1>
    <h2 class="h2"> Ya casi estas dentro del programa, los pasos a seguir son:</h2>
    <h2 class="h2"> Primero:<br> Enviar comprobante de pago por whatsapp </h2>
-   <a class="button-whatsapp" href="https://api.whatsapp.com/send?phone=59897377325&text=Ya%20me%20inscrib%C3%AD%20al%20bootcamp%20de%20Daygame%20y%20Cibergame!"><img class="img-whatsapp" src="boton-de-whastapp.png" alt=""></a>
+   <a class="button-whatsapp" href="https://api.whatsapp.com/send?phone=541141619459&text=Ya%20me%20inscrib%C3%AD%20al%20bootcamp%20Daygame%20y%20Cibergame"><img class="img-whatsapp" src="boton-de-whastapp.png" alt=""></a>
    <h2 class="h2"> Segundo:<br> Ahora solo debes esperar a que te agreguen al grupo </h2>
    <h2 class="h2"> Puedes estar atento a las novedades en instagram</h2>
    <div data-mc-src="085f0c6f-43cc-42c2-a896-692442976fe8#instagram"></div>
