--- a/buenosaires.html
+++ b/buenosaires.html
@@ -21,21 +21,21 @@
 <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
 <!-- Meta Pixel Code -->
 <script>
-!function(f,b,e,v,n,t,s)
-{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-n.queue=[];t=b.createElement(e);t.async=!0;
-t.src=v;s=b.getElementsByTagName(e)[0];
-s.parentNode.insertBefore(t,s)}(window, document,'script',
-'https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '670702824567056');
-fbq('track', 'PageView');
-</script>
-<noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=670702824567056&ev=PageView&noscript=1"
-/></noscript>
-<!-- End Meta Pixel Code -->
+    !function(f,b,e,v,n,t,s)
+    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+    n.queue=[];t=b.createElement(e);t.async=!0;
+    t.src=v;s=b.getElementsByTagName(e)[0];
+    s.parentNode.insertBefore(t,s)}(window, document,'script',
+    'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '670702824567056');
+    fbq('track', 'PageView');
+    </script>
+    <noscript><img height="1" width="1" style="display:none"
+    src="https://www.facebook.com/tr?id=670702824567056&ev=PageView&noscript=1"
+    /></noscript>
+    <!-- End Meta Pixel Code -->
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
     <title>Master en Seducción</title>
@@ -234,7 +234,7 @@ src="https://www.facebook.com/tr?id=670702824567056&ev=PageView&noscript=1"
     <section class="instagram-whatsapp">
         <h1 class="h1-whatsapp">¿Tenés más dudas?</h1>
         <h6 class="h6-whatsapp">Escribime que te respondo</h6>
-        <a class="button-whatsapp" href="https://api.whatsapp.com/send?phone=59897377325&text=Quiero%20saber%20mas%20sobre%20el%20curso%20Master%20en%20seducci%C3%B3n"><img class="img-whatsapp" src="boton-de-whastapp.png" alt=""></a>
+        <a class="button-whatsapp" href="https://api.whatsapp.com/send?phone=59896929992&text=Quiero%20saber%20mas%20sobre%20el%20curso%20Master%20en%20Seducci%C3%B3n"><img class="img-whatsapp" src="boton-de-whastapp.png" alt=""></a>
         
         <div data-mc-src="085f0c6f-43cc-42c2-a896-692442976fe8#instagram"></div>
         
