--- a/agradecimiento-lead.html
+++ b/agradecimiento-lead.html
@@ -29,9 +29,9 @@
     <h2 class="h2">¡Perfecto! Ya casi estás adentro del programa... <br> <br>
         Esto es lo que va a pasar : <br> En 2 minutos te va a llegar un correo con el enlace de acceso al curso. <br> En caso de no verlo, revisa en la carpeta de spam, la de correo no deseado o la de promociones.</h2>
         <br><br>
-        <h2 class="h2">Mientras esperas el mail sumate al nuevo grupo oficial de facebook donde aportamos contenido y testimonios.</h2><br> <br>
+        <h2 class="h2">Mientras esperas el mail sumate al nuevo grupo oficial de Whatsapp donde aportamos contenido y testimonios.</h2><br> <br>
             <br>
-            <button class="container-buton"><a href="https://www.facebook.com/groups/715473467169572" class="container-buton-link">Grupo privado de Facebook</a></button>
+            <button class="container-buton"><a href="https://chat.whatsapp.com/K7XU4AAxWVAFd2orSKLT5c" class="container-buton-link">Grupo privado de Whatsapp</a></button>
   
         <h2 class="h2">Si ya pasaron 2 minutos y todavía no te llega escribinos por whatsapp: </h2>
         <a class="button-whatsapp" href="https://api.whatsapp.com/send?phone=541141619459&text=Hola!%20No%20me%20lleg%C3%B3%20aun%20el%20acceso%20al%20curso"><img class="img-whatsapp" src="boton-de-whastapp.png" alt=""></a>
