--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sniglet&display=swap" rel="stylesheet">
@@ -13,7 +13,8 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css">
        
     <title>Blakensen</title>
-    <link rel="stylesheet" href="pagina-principal.css">
+    <link rel="stylesheet" href="pagina-principal.css" type="text/css">
+    <link rel="stylesheet" href="normalize.css" type="text/css">  
 </head>
 
 <body class="blurred">
@@ -53,7 +54,7 @@
                 </p>
         </div>
     </a>
-        <div class="card left">
+    <a class="card left" href="https://blakensen.com/daygame-cibergame"><div class="">
             <h2>Bootcamp intensivo Daygame & Cibergame</h2>
             <p><strong>Duración:</strong> 3 días</p>
             <p><strong>Formato: </strong>Grupal </p>
@@ -61,7 +62,8 @@
                 Aprende a conocer mujeres durante el día para no depender de salir de noche a bares o boliches, y volvete un maestro en el uso de Tinder, Instagram y WhatsApp para seducir.
                 </p>
         </div>
-        <div class="card rigth">
+      </a>
+      <a class="card rigth" href="https://blakensen.com/social-midgame"><div class="">
             <h2>Social y MidGame</h2>
             <p><strong>Duración:</strong> 3 días</p>
             <p><strong>Formato: </strong>Grupal </p>
@@ -69,7 +71,8 @@
                 Entrenamiento para la seducción de guante blanco, donde la sutileza y la calidad son claves en este sistema que se asemeja más al de “cultivar”, que al de salir a “cazar”.
                 </p>
         </div>
-        <div class="card left">
+      </a>
+      <a class="card left" href="https://api.whatsapp.com/send?phone=59896929992&text=Quiero%20mas%20info%20sobre%20seducci%C3%B3n!"><div class="">
             <h2>SEXO AL 100%</h2>
             <p><strong>Duración:</strong>2 días </p>
             <p><strong>Formato: </strong>Grupal </p>
@@ -77,7 +80,8 @@
                 En Sexo al 100%, Blakensen te enseña sus 10 años de experiencia como coach de seducción explorando las fantasías más íntimas de las mujeres, asi como el autocontrol absoluto del cuerpo masculino.
                 </p>
         </div>
-        <div class="card rigth">
+      </a>
+      <a class="card rigth" href="https://api.whatsapp.com/send?phone=59896929992&text=Quiero%20mas%20info%20sobre%20las%20sesiones%20personalizadas!"><div class="">
             <h2>Sesiones personalizadas VIP con Blakensen</h2>
             <p><strong>Formato:</strong> Individual 1 a 1</p>
             <p>El servicio VIP de Coaching en Seducción y Desarrollo Personal en sesiones 1 a 1 con Blakensen.
@@ -86,6 +90,7 @@
                 <br><li>Quienes desean solucionar problemas particulares como separaciones, bloqueos emocionales o de confianza, recuperar una ex, o cualquier dinámica compleja en la que te encuentres.</li>
                 </ul></p>
         </div>
+      </a>
         <div class="card left">
             <h2>MENTORÍAS PERSONALIZADAS</h2>
             <p><strong>Formato:</strong> Individual 1 a 1</p>
