--- a/lanzamientomaster.html
+++ b/lanzamientomaster.html
@@ -88,7 +88,7 @@
 
     <div id="argentinaSection" class="hidden section">
         <h2>Argentina</h2>
-        <p>El valor del curso es u$d 250 y en pesos argentinos $350.000. Podes pagar con mercado pago o transferencia.</p>
+        <p>El valor del curso es $350.000. Podes pagar con mercado pago o transferencia.</p>
         <div id="boton1" class="container-boton-mercadopago">
             <script class="boton-mercadopago" src="https://www.mercadopago.com.ar/integrations/v1/web-payment-checkout.js"
             data-preference-id="432811606-3b42cf96-fe64-4c4c-8424-1a5ac1d79399" data-source="button">
