--- a/cursodeseduccion.html
+++ b/cursodeseduccion.html
@@ -54,7 +54,7 @@
             Tu navegador no soporta la reproducción de video.
         </video>
     </div>
-    
+    <h2 class="h2-rojo"><span style="color: rgb(254, 254, 254);">Tenemos 2 regalos para los que lleguen al final de ésta clase</span></h2>
   <section id="tuSection" class="continuacion">
 
       
