--- a/cursodeseduccion.html
+++ b/cursodeseduccion.html
@@ -50,7 +50,7 @@
     
     <div class="videocurso_container" style="display: flex; justify-content: center; align-items: center; ">
         <video id="miVideo"  class="curso_video"  autoplay muted>
-            <source src="Curso De Seducción Blakensen.mp4" type="video/mp4">
+            <source src="" type="video/mp4">
             Tu navegador no soporta la reproducción de video.
         </video>
     </div>
