--- a/cursodeseduccion.html
+++ b/cursodeseduccion.html
@@ -49,7 +49,7 @@
    </div>
     
     <div class="videocurso_container" style="display: flex; justify-content: center; align-items: center; ">
-        <video id="miVideo"  class="curso_video"  autoplay muted>
+        <video id="miVideo"  class="curso_video"  autoplay muted controls>
             <source src="curso-censurado.mp4" type="video/mp4">
             Tu navegador no soporta la reproducción de video.
         </video>
